--- a/vue-music/index.html
+++ b/vue-music/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <title>vue-music</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_592153_5nggnbgqo450zfr.css">
   </head>
   <body>
     <div id="app"></div>
